<resources>
    <string name="app_name">CarajilloApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repetix password</string>
    <string name="prompt_register_username">Nom usuari</string>
    <string name="action_sign_in">Iniciar sessió</string>
    <string name="action_register">Crear compte</string>
    <string name="action_sign_in_short">Iniciar sessió</string>
    <string name="welcome">Benvingut!</string>
    <string name="invalid_username">El nom d\'usuari no és vàlid</string>
    <string name="invalid_password">La password ha de tenir almenys 6 caràcters</string>
    <string name="invalid_repeated_password">La password repetido no coincidèix</string>
    <string name="invalid_email">No és un email vàlid</string>
    <string name="login_failed">L\'inici de sessió ha fallat</string>
    <string name="register_failed">La creació del compte ha fallat</string>

    <!-- Strings related to bar -->
    <string name="prompt_bar_name">Nom del bar</string>
    <string name="prompt_bar_city">Ciutat</string>
    <string name="prompt_bar_address">Carrer/Avinguda/Plaça</string>
    <string name="prompt_bar_number">Nombre</string>
    <string name="prompt_bar_postal_code">Còdi postal</string>
    <string name="action_create_bar">Afegir bar</string>
    <string name="invalid_postal_code">El còdi postal ha de ser un nombre</string>
    <string name="invalid_number">El nombre no és valid</string>
    <string name="invalid_address">L\'adreça no pot contindre números</string>

    <!-- Rating strings -->
    <string name="action_vote">Puntuar</string>


    <string name="location_button">Obrir la localització a Google Maps</string>
</resources>